<resources>
    <string name="app_name">Tesses Salon_App</string>
    <string name="tresses">TRESSES</string>
    <string name="signin_now">SignIn Now</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot PassWord?</string>
    <string name="sign_in">Sign In</string>
    <string name="new_user">New User?</string>
    <string name="register_now">Register Now</string>
    <string name="appointments">Appointments</string>
    <string name="about_us">About Us</string>
    <string name="testimonial">Testimonial</string>
    <string name="phone_number">Phone Number</string>
    <string name="sign_up">Sign Up</string>
    <string name="have_an_account">Have An Account?</string>
    <string name="login_now">Login Now</string>
    <string name="sign_up_now">Sign Up Now</string>
    <string name="appointment">Appointment</string>
    <string>About Us</string>
    <string name="make_an_appointment">Make an appointment</string>
    <string name="make_up">Make Up</string>
    <string name="hair_care">Hair Care</string>
    <string name="bridal">Bridal</string>
    <string name="massage">Massage</string>
    <string name="hair_wash">Hair Wash</string>
    <string name="organization_name_is_a_standout_amongst_the_most_amazing_brands_in_the_hair_and_magnificence_care_area_in_northern_and_central_us_which_has_given_hairstyling_another_skyline_developing_as_the_biggest_single_salon_chain_in_the_nation_organization_name_is_additionally_present_universally_at_jlt_in_dubai_with_more_than_3000_workers_the_organization_guarantees_that_everyone_s_abilities_are_honed_in_any_event_once_per_year_looks_has_advanced_throughout_the_years_with_new_methods_and_styles_while_continually_refreshing_its_beauticians_with_the_regularly_developing_patterns_in_the_national_and_global_market_organization_name_always_endeavors_to_teach_and_prepare_their_beauticians_about_the_most_recent_procedures_and_styles_with_cutting_edge_innovation_by_sending_the_beauticians_to_different_classes_and_by_taking_an_interest_in_different_occasions_of_all_kinds">Organization Name’ is a standout amongst the most amazing brands in the hair and magnificence care area in Northern and Central US, which has given hairstyling another skyline. Developing as the biggest single salon chain in the nation; ‘Organization Name’ is additionally present universally at JLT in Dubai. With more than 3000 workers the organization guarantees that everyone’s abilities are honed in any event once per year. Looks has advanced throughout the years; with new methods and styles while continually refreshing its beauticians with the regularly developing patterns in the national and global market. ‘Organization Name’ always endeavors to teach and prepare their beauticians about the most recent procedures and styles with cutting-edge innovation, by sending the beauticians to different classes and by taking an interest in different occasions of all kinds.</string>
</resources>