<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="#F6C275"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="horizontal">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/iv_profileImage"
            android:layout_marginStart="150dp"
            android:layout_width="100dp"
            android:layout_marginTop="90dp"
            android:layout_height="100dp"
            android:src="@drawable/s"
            android:scaleType="centerCrop"/>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tresses"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="40dp">

        <View
            android:layout_marginTop="30dp"
            android:layout_width="90dp"
            android:layout_height="2dp"
            android:background="#F02EDC"
            android:layout_marginStart="40dp"
            />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/signin_now"
            android:layout_marginTop="15dp"
            android:textColor="@color/black"
            android:gravity="center"
            android:textSize="20sp"
            />

        <View
            android:layout_marginTop="30dp"
            android:layout_width="90dp"
            android:layout_height="2dp"
            android:background="#F02EDC"
            android:layout_marginStart="20dp"
            />

    </LinearLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_marginVertical="19dp"
        android:layout_marginHorizontal="30dp"
        android:backgroundTint="@color/black"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_address"
            android:textColorHint="@color/black"
            android:backgroundTint="@color/white"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_marginHorizontal="30dp"
        android:backgroundTint="@color/black"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:textColorHint="@color/black"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="match_parent"
        android:id="@+id/btnforgot_password"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:textColor="#157CCD"
        android:gravity="end"
        android:layout_marginEnd="20dp"
        />

    <Button
        android:layout_width="match_parent"
        android:id="@+id/btnLogin"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="90dp"
        android:backgroundTint="#F02EDC"
        android:layout_marginTop="50dp"
        android:text="@string/sign_in"
        />

    <LinearLayout
        android:layout_marginVertical="10dp"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_marginStart="145dp"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/new_user"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_marginStart="5dp"
            android:textColor="#1C79C3"
            android:id="@+id/tvRegister"
            android:layout_height="wrap_content"
            android:text="@string/register_now"
            />


    </LinearLayout>


</LinearLayout>