<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="#F6C275"
    android:layout_height="match_parent"
    tools:context=".TESSES">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content">

        <TextView
            android:layout_marginStart="10dp"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="TESSES"
            android:gravity=""
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold"
            android:layout_marginTop="20dp"
            />

        <ImageView
            android:id="@+id/ivNotification"
            android:layout_marginStart="200dp"
            android:layout_marginTop="20dp"
            android:layout_width="50dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_baseline_notifications_24" />

    </LinearLayout>


    <LinearLayout
        android:layout_marginVertical="10dp"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="70dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/cvAppointment"
            android:layout_marginTop="10dp"
            app:cardCornerRadius="10dp"
            android:layout_width="150dp"
            android:layout_marginStart="40dp"
            android:layout_height="50dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/appointment"
                android:gravity="center"
                android:layout_marginTop="11dp"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cdAboutUs"
            app:cardCornerRadius="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:layout_width="150dp"
            android:layout_height="50dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_us"
                android:gravity="center"
                android:layout_marginTop="11dp"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                />

        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <TextView
        android:layout_marginStart="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/make_an_appointment"
        android:textSize="25sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        />

    <androidx.cardview.widget.CardView


        android:id="@+id/cvMakeup"
        android:layout_marginHorizontal="20dp"
        app:cardCornerRadius="10dp"
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="100dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="200dp"
                android:layout_height="100dp"
                android:src="@drawable/MUp"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_marginTop="20dp"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/make_up"
                    />

                <View
                    android:layout_marginTop="5dp"
                    android:background="#F02EDC"
                    android:layout_width="match_parent"
                    android:layout_marginHorizontal="25dp"
                    android:layout_height="3dp"/>
            </LinearLayout>


        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cvHairCare"
        app:cardCornerRadius="10dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="100dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="200dp"
                android:layout_height="100dp"
                android:src="@drawable/h"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_marginTop="20dp"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/hair_care"
                    />

                <View
                    android:layout_marginTop="5dp"
                    android:background="#F02EDC"
                    android:layout_width="match_parent"
                    android:layout_marginHorizontal="25dp"
                    android:layout_height="3dp"/>
            </LinearLayout>


        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cvBridal"
        app:cardCornerRadius="10dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="5dp"
        android:layout_width="match_parent"
        android:layout_height="100dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="200dp"
                android:layout_height="100dp"
                android:src="@drawable/BrD"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_marginTop="20dp"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/bridal"
                    />

                <View
                    android:layout_marginTop="5dp"
                    android:background="#F02EDC"
                    android:layout_width="match_parent"
                    android:layout_marginHorizontal="25dp"
                    android:layout_height="3dp"/>
            </LinearLayout>


        </LinearLayout>

    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:id="@+id/cvMassage"
        app:cardCornerRadius="10dp"
        android:layout_marginHorizontal="20dp"
        android:layout_width="match_parent"
        android:layout_height="100dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="200dp"
                android:layout_height="100dp"
                android:src="@drawable/ma"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_marginTop="20dp"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/massage"
                    />

                <View
                    android:layout_marginTop="5dp"
                    android:background="#F02EDC"
                    android:layout_width="match_parent"
                    android:layout_marginHorizontal="25dp"
                    android:layout_height="3dp"/>
            </LinearLayout>


        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cvTexturizing"
        app:cardCornerRadius="10dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="5dp"
        android:layout_width="match_parent"
        android:layout_height="100dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="200dp"
                android:layout_height="100dp"
                android:src="@drawable/TxT"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_marginTop="20dp"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Texturizing"
                    />

                <View
                    android:layout_marginTop="5dp"
                    android:background="#F02EDC"
                    android:layout_width="match_parent"
                    android:layout_marginHorizontal="25dp"
                    android:layout_height="3dp"/>
            </LinearLayout>


        </LinearLayout>

    </androidx.cardview.widget.CardView>





</LinearLayout>
